Clear JDK sources override after the test.